# goonerism

./: CMakeLists.txt  README.md  resources.qrc  styles.qss
.github/workflows/: ci.yml  release.yml
src/Includes/: appsettings.h  borderlesswindow.h  dragToolButton.h  dropFilter.h  icons.h  mainWindow.h  mediaSource.h  mediautils.h  overlayShapes.h  previewLabel.h  resizeFilter.h  timelinewidget.h  titlebar.h
src/Main/: audio.cpp  borderlesswindow.cpp  export.cpp  keyboardEvents.cpp  main.cpp  mainWindow.cpp  mediaLoader.cpp  mouseEvents.cpp  notification.cpp  previewLabel.cpp  styles.qss  timelinewidget.cpp  titlebar.cpp  undoredo.cpp  updater.cpp
